--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,10 @@
     margin-bottom: 40px;
 
   }
-  
+  .wrapper{
+    padding-top: 128px; 
+  }
+
 input:focus {
   outline: 0px !important;  
   -webkit-appearance: none;  
@@ -24,6 +27,10 @@ input:focus {
     width: 100%;
     padding: 0 20px;
   }
+  .wrapper{
+    padding-top: 128px; 
+  }
+ 
 }
 @media screen and (min-width: 768px) and (max-width: 1000px){
   .container{
@@ -31,12 +38,16 @@ input:focus {
     width: 100%;
     padding: 0 20px;
   }
+ 
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .container{
     margin: 0 auto;
     width: 100%;
     padding: 0 20px;
+  }
+  .wrapper{
+    padding-top: 68px; 
   }
 }
 
@@ -45,5 +56,8 @@ input:focus {
    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
+  }
+  .wrapper{
+    padding-top: 68px; 
   }
 }
