--- a/src/components/UI/AllProductsBtn/AllProductsBtn.module.css
+++ b/src/components/UI/AllProductsBtn/AllProductsBtn.module.css
@@ -28,7 +28,15 @@
     color: white;
     font-weight: bold;
   }
-
+  @media screen and (min-width: 768px) and (max-width: 1250px){
+    .allProducts_btn{
+      /* display: inline-flex; */
+   width: 128px;
+   height: 34px;
+   padding: 0;
+  margin: 0;
+}
+  }
 @media (max-width: 480px){
     .allProducts_btn{
            display: inline-flex;
@@ -37,6 +45,7 @@
         padding: 0;
        margin: 0;
     }
+  
   
     
 }
