--- a/src/pages/CartPage/Cartpage.module.css
+++ b/src/pages/CartPage/Cartpage.module.css
@@ -431,6 +431,22 @@ color: #282828;
   }
   
   @media screen  and (max-width: 479px){
+    .congratulations_window h3{
+        font-size: 28px;
+    
+    }
+    .congratulations_window {
+        max-width: 320px;
+        height: 315px;
+        padding-top: 50px;
+    }
+    .congratulations_overlay{
+        padding: 0 20px;
+    }
+    .close_btn{
+        top: 15px;
+        right: 15px;
+    }
     .wrapper__content{
         flex-direction: column;
         gap: 20px;
@@ -440,7 +456,7 @@ color: #282828;
     }
   .product__info{
     padding: 10px;
-    gap: 25px;
+    gap: 15px;
   }
     .container__image img{
         max-width: 116px;
