--- a/src/pages/CartPage/Cartpage.module.css
+++ b/src/pages/CartPage/Cartpage.module.css
@@ -40,7 +40,6 @@
 .container__image {
     border: 1px solid #DDDDDD;
     border-radius: 6px;
-    /* overflow: hidden; */
     box-sizing: border-box;
 }
 .form{
@@ -238,8 +237,8 @@ color: #282828;
     z-index: 999;
 }
 .congratulations_window {
-    background-color: green; /* Зеленый цвет для окна поздравления */
-    color: white; /* Белый текст */
+    background-color: green;
+    color: white; 
     padding: 20px;
     border-radius: 10px;
     text-align: center;
@@ -278,8 +277,6 @@ color: #282828;
      cursor: pointer;
   }
   .congratulations_icons:hover{
-    /* width: 48px;
-    height: 48px; */
     transform: scale(1.1);
   }
   .continue__btn{
@@ -303,19 +300,12 @@ color: #282828;
   }
 
 
-
-  /* //--////// */
-
- 
-
   @media screen and (min-width: 768px) and (max-width: 1250px) {
      .wrapper__content {
         display: flex;
         gap: 20px;
       }
-      /* .title{
-        max-width: 190px;
-      } */
+    
       .categories_line{
         max-width: 282px;
       }
@@ -340,14 +330,6 @@ color: #282828;
         box-sizing: border-box;
       }
     
-    
-      /* .product__info{
-        min-width: 270px;
-        padding: 12px;
-        gap: 12px;
-    } */
-
-      
       .count__container{
         flex-direction: column;
         gap: 12px;
