--- a/src/pages/CartPage/Cartpage.module.css
+++ b/src/pages/CartPage/Cartpage.module.css
@@ -134,6 +134,7 @@
     cursor: pointer;
     color: #8B8B8B;
     transition: transform 0.3s ease;
+    background-color: white;
 }
 
 .count_btn:hover {
@@ -381,8 +382,8 @@ color: #282828;
         height: 100%;
     }
     .icons{
-        top: 20px;
-        right: 20px;
+        top: 10px;
+        right: 10px;
     }
     .form{
         width: 100%;
@@ -473,8 +474,8 @@ color: #282828;
     height:47px ;
 }
     .icons{
-        top: 30px;
-        right: 20px;
+        top: 10px;
+        right: 5px;
     }
     .form{
         width: 100%;
